--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ docs/*
 *.json
 notebooks/*.html
 notebooks/.Rhistory
+notebooks/.RData
 /notebooks/Markdown_finding_duplicates_files
 references/*
 
