--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.10
+  - r-essentials
+  - r-base
   - black
   - flake8
   - isort
@@ -18,7 +20,6 @@ dependencies:
   - sqlalchemy
   - schedule
   - pandas
-  - polars
   - scikit-learn
   - boxsdk
   - pip:
