--- a/config/catalog.yaml
+++ b/config/catalog.yaml
@@ -14,6 +14,16 @@ datasets:
     path: "data/external/shapefiles_odisha/block_boundaries/Odisha_Admin_Block_BND_2021.shp"
     layer: external
 
+  district_shapefiles:
+    type: shapefile
+    path: "data/external/shapefiles_odisha/district_boundaries/Odisha_Admin_District_BND_2021.shp"
+    layer: external
+
+  village_populations:
+    type: csv
+    path: "data/external/all_districts_villages.csv"
+    layer: external
+
   geocodes:
     type: parquet
     path: "data/interim/geocodes.pq"
