Update HSS pipeline to save Parquet files; adjust catalog config

--- a/config/catalog.yaml
+++ b/config/catalog.yaml
@@ -109,9 +109,21 @@ datasets:
     path: "data/processed/iti_vacancies.pq"
     layer: processed
 
-  hss_geocoded_with_marks:
+  hss_enrollment:
     type: parquet
-    path: "data/interim_hss/geocoded_with_marks.pq"
+    path: "data/interim/hss_enrollment.pq"
+    layer: interim
+
+  flattened_hss_options:
+    type: parquet
+    path: "data/interim/flattened_hss_options.pq"
+    layer: interim
+
+  hss_compartment_subjects:
+    type: parquet
+    path: "data/interim/hss_compartment_subjects.pq"
+    layer: interim
+
 
 
 exhibits:
