--- a/config/catalog.yaml
+++ b/config/catalog.yaml
@@ -109,25 +109,26 @@ datasets:
     path: "data/processed/iti_vacancies.pq"
     layer: processed
   
-  hss_enrollment:
+  hss_student_enrollments:
     type: parquet
     path: "data/interim/hss_enrollment.pq"
     layer: interim
 
-  hss_applications:
+  hss_student_applications:
     type: parquet
-    path: "data/interim/hss_applications.pq"
+    path: "data/interim/hss_student_applications.pq"
     layer: interim
 
-  hss_compartments_marks:
+  hss_student_marks:
     type: parquet
-    path: "data/interim/hss_compartment_marks.pq"
+    path: "data/interim/hss_student_marks.pq"
     layer: interim
 
-  first_choice_admitted:
+  hss_first_choice_admissions:
     type: parquet
     path: "data/interim/first_choice_admitted.pq"
     layer: interim
+
 
 
 exhibits:
