Update catalog config

--- a/config/catalog.yaml
+++ b/config/catalog.yaml
@@ -121,14 +121,23 @@ datasets:
 
   hss_marks:
     type: parquet
-    path: "datcleara/interim/hss_marks.pq"
+    path: "data/interim/hss_marks.pq"
     layer: interim
 
-  hss_first_choice_admissions:
+  deg_enrollments:
     type: parquet
-    path: "data/interim/hss_first_choice_admissions.pq"
+    path: "data/interim/deg_enrollments.pq"
     layer: interim
 
+  deg_applications:
+    type: parquet
+    path: "data/interim/deg_applications.pq"
+    layer: interim
+
+  deg_marks:
+    type: parquet
+    path: "data/interim/deg_marks.pq"
+    layer: interim
 
 
 exhibits:
