--- a/environment.yml
+++ b/environment.yml
@@ -23,6 +23,9 @@ dependencies:
   - scikit-learn
   - rapidfuzz
   - great-expectations
+  - ibis-framework
+  - duckdb
+  - psutil
   - pip:
     - python-dotenv
     - mkdocs
@@ -39,3 +42,4 @@ dependencies:
     - shapely
     - ipykernel
     - -e .
+  
